<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:id="@+id/study"
        style="@style/list_button"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/tab_icon_size"
            android:layout_height="@dimen/tab_icon_size"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingRight="5dp"
            app:srcCompat="@drawable/study" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/study_text"
            android:textSize="24dp"
            android:clickable="false"
            android:focusable="false"
            android:layout_gravity="center" />
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/study_mode"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/learning_mode" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_to_workout_mode"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/edit"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/preview_edit" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/edit_button_text"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/list"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/card_list" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/list_mode_text"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/quiz"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/quiz" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/quiz_text"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/card_player"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/card_player" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/card_player_text"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/settings"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/db_settings" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/settings_menu_text"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/statistics"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/statistics" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/statistics_text"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/share"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/share" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/share_text"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:id="@+id/delete"
            style="@style/list_button"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tab_icon_size"
                android:layout_height="@dimen/tab_icon_size"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/delete_forever" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/delete_text"
                android:textSize="24dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
